Added nav bar to all pages

--- a/new-character-form.html
+++ b/new-character-form.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
-    <title>New Character Form</title>
+    <title>Add a Character</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <ul class="navbar-nav flex-row gap-3">
+            <li class="nav-item">
+                <a class="nav-link active" href="https://wjmoore32001.github.io/Assignment3_Static_Web_App/">Home</a>
+            </li>
+            <li>
+                <a class="nav-link active" href="https://wjmoore32001.github.io/Assignment3_Static_Web_App/about">About</a>
+            </li>
+            <li>
+                <a class="nav-link active" href="https://wjmoore32001.github.io/Assignment3_Static_Web_App/details">Details</a>
+            </li>
+            <li>
+                <a class="nav-link active" href="https://wjmoore32001.github.io/Assignment3_Static_Web_App/new-character-form">Add a Character</a>
+            </li>
+        </ul>
+        <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="'Character Name'"/>
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+    </div>
+</nav>
+
+
 
 </body>
 </html>
