Added about page information, along with image

--- a/about.html
+++ b/about.html
@@ -27,6 +27,11 @@
             <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
     </div>
+    <div class="text-center">
+        <h1 class="mb-3" >About</h1>
+        <img src="images/Jujutsu-Kaisen.jpeg" alt="Group picture of jujutsu kaisen characters" style="transform: rotate(270deg);"/>
+        <h3>The goal of this site is to display character information from the anime/manga Jujutsu Kaisen.</h3>
+    </div>
 </nav>
 
 
